@@ -1,6 +1,7 @@
 * 2013-09-06 - thorben.betten@open-xchange.com
 
  - Fix for bug 28718: Sanitize possible passwords from logged SOAP payloads
+ - Fix for bug 23491: Removed FOREIGN KEY specifications from initial CREATE TABLE statements, too
 
 * 2013-09-05 - dennis.sieben@open-xchange.com
 
